# music_player

./: .gitignore  README.md  package-lock.json  package.json  pnpm-lock.yaml  register_file_associations.ps1  register_file_associations.reg  tailwind.config.js
src/: index.html  index.js  indexStyles.css  main.js  settings.html  settings.js  settingsStyles.css  styles copy.css  styles.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: audio.rs  commands.rs  lib.rs  main.rs  utils.rs
src-tauri/wix/: RegistryEntries.wxs
src/lib/: invoke.js  store.js  utils.js
src/lib/components/: ControlInterface.svelte  Playlist.svelte  ProgressBar.svelte  SongInformations.svelte  VolumeBar.svelte  WindowControls.svelte
src/routes/: +layout.svelte  +page.svelte
