[package]
name = "music_player"
version = "0.0.0"
description = "A Tauri App"
authors = ["you"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "1", features = [] }

[dependencies]
tauri = { version = "1", features = [ "window-minimize", "shell-open", "window-close", "window-start-dragging"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
rodio = { version = "0.19.0", features = ["symphonia-all"] }
symphonia = "0.5.4"
# opener = "0.7.2"
# dirs = "5.0.1"

[features]
# This feature is used for production builds or when a dev server is not specified, DO NOT REMOVE!!
custom-protocol = ["tauri/custom-protocol"]
